# pando-mono

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  DockerTacc.dev  DockerTacc_dbg.dev  Dockerfile.ci  Dockerfile.dev  LICENSE.txt  Makefile  README.md  bench_tc.py  clean_el.py  tacc_setup.sh
examples/: CMakeLists.txt  benchmark_GlobalRef.cpp  benchmark_loadbalance.cpp  benchmark_pointer.cpp  benchmark_runtime.cpp
microbench/: CMakeLists.txt  CPPLINT.cfg
microbench/bfs/: CMakeLists.txt
microbench/bfs/ok/: fully_connected.el-1000-0-1.ok  fully_connected.el-1000-0.ok  kron_default_10.el.ok  quick.el-8-0-1-2-3-4-5.ok  rmat_571919_seed1_scale10_nV1024_nE10447.el.ok  rmat_571919_seed1_scale11_nV2048_nE22601.el.ok  rmat_571919_seed1_scale12_nV4096_nE48335.el.ok  rmat_571919_seed1_scale13_nV8192_nE102016.el.ok  rmat_571919_seed1_scale14_nV16384_nE213350.el.ok
microbench/bfs/src/: CMakeLists.txt  main.cpp  sssp.cpp
microbench/bfs/test/: CMakeLists.txt  test_driver.cpp  test_dummy.cpp  test_sssp.cpp
microbench/include/: tc_algos.hpp  tc_naive.hpp  tc_pangolin.hpp  utils.hpp
microbench/src/: tc.cpp  tc_naive.cpp
microbench/test/: test_tc.cpp  test_tc_naive.cpp
microbench/triangle-counting/: CMakeLists.txt  README.md  Readme.md  graph_compare.cpp  tc.cpp  tc_algos.cpp  tc_algos.hpp  tc_naive.hpp  tc_pangolin.hpp  utils.cpp  utils.hpp
microbench/triangle-counting/docs/: CMakeLists.txt
microbench/triangle-counting/include/: tc_algos.hpp  tc_mdlcsr.hpp  tc_naive.hpp  tc_pangolin.hpp  utils.hpp
microbench/triangle-counting/src/: CMakeLists.txt  bench_remote_access.cpp  graph_compare.cpp  tc.cpp  tc_algos.cpp  tc_mdlcsr.cpp  tc_naive.cpp  utils.cpp
microbench/triangle-counting/test/: CMakeLists.txt  test_tc.cpp  test_tc_naive.cpp
pando-rt/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md
pando-rt/cmake/: PANDOCompilerOptions.cmake  PANDOTesting.cmake
pando-rt/cmake/Modules/: FindDrvx.cmake  FindQthreads.cmake
pando-rt/docker/: Dockerfile  Dockerfile.dev  build.sh  docker_build.sh  docker_run.sh  docker_setup.sh  setup.sh  test.sh
pando-rt/docs/: CMakeLists.txt  DRVX.md  PGAS.md  PREP.md  developer.md  memory-resources.md  watermark.sty
pando-rt/examples/: CMakeLists.txt  gups.cpp  gups_no_tasks.cpp  helloworld.cpp  memory_resource.cpp  stack_sizes.cpp
pando-rt/examples/multi_pxns/: CMakeLists.txt  allcores_reduce_values.cpp  allcores_reducebroadcast_values.cpp  onecore_perpxn_reduce_values.cpp  onecore_perpxn_reducebroadcast_values.cpp  onecore_scatter_diffdim_arrays_values.cpp  onecore_scatter_samedim_arrays_values.cpp
pando-rt/examples/single_pxn/: CMakeLists.txt  onecore_increment_value.cpp  onecore_scatter_values.cpp  pass_value_in_allcores.cpp  pass_value_in_twocores.cpp  serial_tasks.cpp  twocores_scatter_values.cpp
pando-rt/include/pando-rt/: CPPLINT.cfg  drv_info.hpp  index.hpp  locality.hpp  main.hpp  memory.hpp  memory_resource.hpp  pando-rt.hpp  program_phase.hpp  program_stage.hpp  specific_storage.hpp  status.hpp  stddef.hpp  stdlib.hpp  tracing.hpp.in
pando-rt/scripts/: drvxrun.sh  preprun.sh  preprun_mpi.sh
pando-rt/src/: CMakeLists.txt  allocate_memory.cpp  atomic.cpp  drv_info.cpp  execute_on.cpp  global_ptr.cpp  init.cpp  init.hpp  locality.cpp  memory.cpp  memory_info.cpp  memory_resources.cpp  memory_resources.hpp  program_phase.cpp  program_stage.cpp  queue.hpp  request.cpp  specific_storage.cpp  specific_storage.hpp  start.cpp  start.hpp  stdlib.cpp  termination.cpp  tracing.cpp  wait.cpp  wsq.hpp
pando-rt/src/drvx/: CMakeLists.txt  cores.cpp  cores.hpp  cp.cpp  cp.hpp  drvx.cpp  drvx.hpp  index.cpp  index.hpp  log.cpp  log.hpp  status.cpp  status.hpp  termination.cpp  termination.hpp
pando-rt/src/prep/: CMakeLists.txt  config.cpp  config.hpp  cores.cpp  cores.hpp  data_type.hpp  hart_context.cpp  hart_context.hpp  hart_context_fwd.hpp  index.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  memtrace_log.cpp  memtrace_log.hpp  memtrace_stat.cpp  nodes.cpp  (+4 more)
pando-rt/test/: CMakeLists.txt  common.hpp  common_memory.hpp  test_driver.cpp  test_dummy.cpp  test_index.cpp  test_init.cpp  test_return.cpp
src/: CMakeLists.txt  atomic.cpp  edge_exchange.cpp  edge_list_importer.cpp  host_local_storage.cpp  ifstream.cpp  ingest_rmat_el.cpp  ingest_wmd_csv.cpp  lcsr.cpp  local_storage.cpp  loops.cpp  schema.cpp  wmd_graph_importer.cpp
test/: CMakeLists.txt  fail_tests.cpp  import_csrlist.cpp  import_dirOptCsrList.cpp  import_ifstream.cpp  test.cpp  test2.cpp  test_driver.cpp  test_mirror_master_table.cpp
test/containers/: CMakeLists.txt  per_host.cpp  test_array.cpp  test_dist_array.cpp  test_hashtable.cpp  test_host_cached_array.cpp  test_host_indexed_map.cpp  test_host_local_storage.cpp  test_inner_vector.cpp  test_per_host.cpp  test_per_thread.cpp  test_pod_local_storage.cpp  test_stack.cpp  test_thread_local_storage.cpp  test_thread_local_vector.cpp
test/graphs/: CMakeLists.txt  test_dist_array_csr.cpp  test_dist_local_csr.cpp  test_local_csr.cpp  test_map_exchange.cpp  test_mirror_dist_local_csr.cpp
test/import/: CMakeLists.txt  test_cusp_importer.cpp  test_edge_exchange.cpp  test_schema.cpp  test_wmd_importer.cpp
test/loops/: CMakeLists.txt  test_do_all.cpp
test/python/: CMakeLists.txt  broadcast_validate.py  mapexchange_validate.py  reduce_validate.py  sync_validate.py  test_MDLCSR_Broadcast.cpp  test_MDLCSR_MapExchange.cpp  test_MDLCSR_Reduce.cpp  test_MDLCSR_Sync.cpp  test_mirror_master_table.cpp
test/sorts/: CMakeLists.txt  test_merge_sort.cpp
test/sync/: CMakeLists.txt  test_atomic.cpp  test_global_barrier.cpp  test_simple_lock.cpp  test_wait_group.cpp
test/utility/: CMakeLists.txt  test_const_range.cpp  test_counted_iterator.cpp  test_dist_accumulator.cpp  test_gptr_monad.cpp  test_pair.cpp  test_prefix_sum.cpp  test_search.cpp  test_string_view.cpp  test_tuple.cpp
workflows/influence_maximization/: CMakeLists.txt
workflows/vertex_classification/: CMakeLists.txt  Makefile  README.md
(+701 files in other folders)
